--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tanvir's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div>
+            <h1>Welcome To</h1>
+            <h1> <span class="color"> Tanvir's </span> Empire!</h1>
+            <h3>A Boy Who Has Crazy Passion 'bout Web-Dev </h3>
+            <p>Hi There!
+                Myself Tanvir, I am learning and mastering something exciting which is called Web-Dev.
+                I can give you all the website and software solution, Oviously not mow. So keep me in your prayer. </p>
+        </div>
+
+
+        <div>
+            <img src="mypicture.png" alt="">
+        </div>
+
+
+    </section>
 </body>
+
 </html>
