top banner added

--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
+
+
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="color"> Tanvir's </span> Empire!</h1>
             <h3>A Boy Who Has Crazy Passion 'bout Web-Dev </h3>
             <p>Hi There!
                 Myself Tanvir, I am learning and mastering something exciting which is called Web-Dev.
-                I can give you all the website and software solution, Oviously not mow. So keep me in your prayer. </p>
+                I can give you all the website and software solution, Oviously not mow. So keep me in your prayer.
+            </p>
             <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100008850030141">Hire
                 Me</a>
         </div>
+
 
 
         <div class="half-width">
