dream-big added

--- a/index.html
+++ b/index.html
@@ -33,9 +33,20 @@
         <div class="half-width">
             <img src="mypicture.png" alt="">
         </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="jhankar.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web devoloper</h2>
+            <p>Since childhood I had a dream to be a web devoloper. And now I am chasing my dream hardly. So need your
+                support and love. Wish you a happy coding journey</p>
 
-
-
+            <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100008850030141">MY
+                WHATSAPP</a>
+        </div>
     </section>
 </body>
 
