--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
 
 
         <div class="half-width">
-            <h1>Welcome To</h1>
+            <h1 class="welcome">Welcome To</h1>
             <h1> <span class="color"> Tanvir's </span> Empire!</h1>
             <h3>A Boy Who Has Crazy Passion 'bout Web-Dev </h3>
             <p>Hi There!
@@ -34,7 +34,7 @@
             <img src="mypicture.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="jhankar.png" alt="">
         </div>
@@ -48,6 +48,32 @@
                 WHATSAPP</a>
         </div>
     </section>
+    <section class="expo-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack" class="expo">
+                <h1>Full Stack Web-devoloper</h1>
+                <h3 class="oranged">2022-present \ Pro level devoloper</h3>
+                <p>People can become developers from almost any background, whether they started programming at an early
+                    age
+                    and majored in computer science (CS), or they taught themselves how to code later in life. These
+                    stories
+                    focus on how the authors went from being beginning coders to getting that first job.</p>
+            </div>
+            <div id="baby-web" class="expo">
+                <h1>Baby Web-devoloper</h1>
+                <h3 class="oranged">20022-2024_ Pro Level Dev</h3>
+                <p> is an extremely influential person in the software and operations engineering community. Her blog
+                    and
+                    Twitter account are super-popular, but the one thing you should know about Evans is that she has an
+                    always-learning mindset. While this post isn't saying that you need 10 years before you can become a
+                    programmer, it is saying that you should always feel as if you're "becoming" a</p>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <p>©All rights reserved by the Tanvir IT .Inc</p>
+</footer>
 
 </html>
